--- a/gambling-api/requirements.txt
+++ b/gambling-api/requirements.txt
@@ -1,3 +1,4 @@
+bcrypt==4.1.2
 blinker==1.7.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
@@ -9,6 +10,10 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+marshmallow==3.20.1
+packaging==23.2
+peewee==3.17.0
+PyJWT==2.8.0
 python-dotenv==1.0.0
 requests==2.31.0
 urllib3==2.1.0
